# jzskills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh.md
add-cloud-agent-collaborator/: SKILL.md
docs/: agent-skills-practices.md  status-terms.md
get-fast-download/: SKILL.md
jz-add-gh-collaborator/: SKILL.md
jz-add-search-index/: SKILL.md
jz-audit-cf-cost/: SKILL.md
jz-audit-vercel-cost/: SKILL.md
jz-build-personal-context/: SKILL.md  package.json
jz-check-cloud-agent/: SKILL.md  config.example.yaml
jz-check-metrics/: SKILL.md  check_metrics.py
jz-check-pagespeed/: SKILL.md
jz-commit-code/: SKILL.md
jz-create-cf-site/: SKILL.md
jz-create-cf-token/: SKILL.md  config.example.toml
jz-create-site/: SKILL.md
jz-find-revenue-site/: .env.example  SKILL.md  config.example.toml  pyproject.toml
jz-find-revenue-site/agents/: openai.yaml
jz-find-revenue-site/config/: filters.toml  payment_targets.toml
jz-find-revenue-site/ptr/: cli.py  db.py  domain_age.py  filters.py  radar_strategy.py  refdomains.py  similarweb.py  trustmrr.py
jz-init-tailwind-theme/: SKILL.md
jz-launch-domain/: SKILL.md
jz-make-viral/: SKILL.md
jz-migrate-to-cf/: SKILL.md
jz-pack-source/: SKILL.md
jz-push-code/: SKILL.md
jz-setup-site-analytics/: SKILL.md
jz-track-conversion/: SKILL.md
pdf-to-chinese/: SKILL.md
personal-context-builder/: SKILL.md  package.json
push-code/: SKILL.md
upstart-cloudflare-site/: SKILL.md
vercel-cost-analysis/: SKILL.md
vercel-to-cloudflare-migration/: SKILL.md
wechat-social-analytics/: SKILL.md
(+105 files in other folders)
